// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-arrow-indicator css-tfxa88"
  data-g2-c16t="true"
  data-g2-component="ArrowIndicator"
>
  <div
    class="css-j1yu9m"
  >
    <div
      class="wp-components-icon css-feyyos"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="currentColor"
        height="5"
        size="5"
        viewBox="0 0 24 24"
        width="5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12l-18 12v-24z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render with a custom size 1`] = `
<div
  class="wp-components-arrow-indicator css-1cj2h16"
  data-g2-c16t="true"
  data-g2-component="ArrowIndicator"
>
  <div
    class="css-j1yu9m"
  >
    <div
      class="wp-components-icon css-feyyos"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="currentColor"
        height="5"
        size="5"
        viewBox="0 0 24 24"
        width="5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12l-18 12v-24z"
        />
      </svg>
    </div>
  </div>
</div>
`;
